[workspace]

members = [
  "crates/cli",
  "crates/metrics",
  "crates/common",
  "crates/holochain",
  "crates/conductor_lib",
  "crates/conductor_api",
  "crates/holochain_wasm",
  "crates/core",
  "crates/core_types",
  "crates/dpki",
  "crates/hdk_v2",
  "crates/hdk",
  "crates/in_stream",
  "crates/locksmith",
  "crates/net",
  "crates/stress",
  "crates/trycp_server",
  "crates/sim1h",
  "crates/sim2h",
  "crates/sim2h_server",
  "crates/wasm_utils"
]
exclude = [
  "test_utils",
  "app_spec",
  "app_spec_proc_macro",
  "nodejs_conductor/native",
]

[patch.crates-io]
lib3h = { version = "=0.0.31", git = "https://github.com/holochain/lib3h", branch = "tracing-0.0.6" }
lib3h_protocol = { version = "=0.0.31", git = "https://github.com/holochain/lib3h", branch = "tracing-0.0.6" }
lib3h_crypto_api = { version = "=0.0.31", git = "https://github.com/holochain/lib3h", branch = "tracing-0.0.6" }
lib3h_sodium = { version = "=0.0.31", git = "https://github.com/holochain/lib3h", branch = "tracing-0.0.6" }
lib3h_zombie_actor = { version = "=0.0.31", git = "https://github.com/holochain/lib3h", branch = "tracing-0.0.6" }

#holochain_tracing = { path = '../holochain-tracing/crates/tracing' }
#holochain_tracing_macros = { path = '../holochain-tracing/crates/tracing_macros' }

holochain_tracing = { version = "=0.0.16", git = "https://github.com/holochain/holochain-tracing", branch = "line_numbers" }
holochain_tracing_macros = { version = "=0.0.16", git = "https://github.com/holochain/holochain-tracing", branch = "line_numbers" }


# lib3h = { version = "=0.0.31", path = "../lib3h/crates/lib3h" }
# lib3h_protocol = { version = "=0.0.31", path = "../lib3h/crates/lib3h_protocol" }
# lib3h_crypto_api = { version = "=0.0.31", path = "../lib3h/crates/crypto_api" }
# lib3h_sodium = { version = "=0.0.31", path = "../lib3h/crates/sodium" }
# lib3h_zombie_actor = { version = "=0.0.31", path = "../lib3h/crates/zombie_actor" }

# holochain_tracing = { version = "=0.0.15", path = "../tracing/crates/tracing" }
# holochain_tracing_macros = { version = "=0.0.15", path = "../tracing/crates/tracing_macros" }
