[package]
name = "holochain_cas_implementations"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
serde="1"
serde_derive="1"
serde_json="1"
serde_test="1"
multihash = "0.8.0"
holochain_core_types = { path = "../core_types" }
riker = "0.1.7"
riker-default = "0.1.7"
riker-patterns = "0.1.7"
futures-preview = "0.2.2"
lazy_static = "1.1.0"
unwrap_to = "0.1.0"
snowflake = "1.2"
walkdir = "2"

[dev-dependencies]
holochain_core_types = { path = "../core_types" }
tempfile = "3"
