[package]
name = "holochain_cas_implementations"
version = "0.0.2"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
serde="1"
serde_derive="1"
serde_json="1"
serde_test="1"
multihash = "0.8.0"
holochain_core_types = { path = "../core_types" }
lazy_static = "1.1.0"
snowflake = "1.2"
walkdir = "2"
uuid = { version = "0.7", features = ["v4"] }
im = "^12.2"
chrono = "0.4"

[dev-dependencies]
holochain_core_types = { path = "../core_types" }
tempfile = "3"
