[package]
name = "hc"
version = "0.0.7-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_core = { path = "../core" }
holochain_common = { path = "../common" }
holochain_conductor_api = { path = "../conductor_api" }
holochain_dpki = { path = "../hc_dpki" }
holochain_sodium = { path = "../sodium" }
holochain_wasm_utils = { path = "../wasm_utils" }
structopt = "0.2"
failure = "=0.1.5"
serde = "1.0"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
toml = "0.4"
semver = { version = "0.9.0", features = ["serde"] }
base64 = "=0.10.1"
colored = "=1.7.0"
ignore = "0.4.3"
rpassword = "2.1.0"
rustyline = "^2.1"
directories = "1.0"

[dev-dependencies]
tempfile = "=3.0.7"
