[package]
name = "holochain"
version = "0.0.8-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_conductor_api = { path = "../conductor_api" }
holochain_sodium = { path = "../sodium" }
holochain_common = { path = "../common" }
structopt = "=0.2.15"
tiny_http = "=0.6.2"
ws = "=0.8.0"
