[package]
name = "holochain_container"
version = "0.0.3"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_container_api = { path = "../container_api" }
clap = "2"
structopt = "0.2"
tiny_http = "0.6.0"
ws = "0.7.9"
