[package]
name = "holochain_container_api"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_cas_implementations = { path = "../cas_implementations" }
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
holochain_net = { path = "../net" }
futures-preview = "0.2.2"
tempfile = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.4.8"
boolinator = "2.4"
ws = "0.7.9"

[dev-dependencies]
test_utils = { path = "../test_utils"}
clap = "2"
structopt = "0.2"
