[package]
name = "holochain_core"
version = "0.0.7-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
base64 = "=0.10.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
chrono = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
snowflake = "1.2"
bitflags = "1.0"
wasmi = "0.3"
failure = "0.1.3"
futures-preview = "=0.3.0-alpha.12"
futures-core-preview = "=0.3.0-alpha.12"
futures-channel-preview = "=0.3.0-alpha.12"
futures-executor-preview = "=0.3.0-alpha.12"
futures-io-preview = "=0.3.0-alpha.12"
futures-sink-preview = "=0.3.0-alpha.12"
futures-util-preview = "=0.3.0-alpha.12"
lazy_static = "=1.3.0"
unwrap_to = "0.1.0"
num-traits = "0.2"
num-derive = "0.2"
regex = "1"
toml = "0.4.8"
holochain_net = { path = "../net" }
holochain_wasm_utils = { path = "../wasm_utils"}
holochain_common = { path = "../common" }
holochain_core_types_derive = { path = "../core_types_derive" }
holochain_core_types = { path = "../core_types" }
holochain_cas_implementations = { path = "../cas_implementations" }
holochain_dpki = { path = "../hc_dpki" }
holochain_sodium = { path = "../sodium" }
boolinator = "2.4.0"
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-lite = "0.5.0"
globset = "0.4.2"
pretty_assertions = "0.5.1"
pin-utils = "0.1.0-alpha.4"
clokwerk = "0.1.0"

[dev-dependencies]
wabt = "0.7.2"
test_utils = { path = "../test_utils"}
tempfile = "=3.0.7"
