[package]
name = "holochain_core_api"
version = "0.1.0"
authors = ["Eric Harris-Braun <eric@harris-braun.com>"]

[dependencies]
holochain_core = { path = "../core" }
holochain_dna = { path = "../dna" }
holochain_agent = { path = "../agent" }

[dev-dependencies]
test_utils = { path = "../test_utils"}
