[package]
name = "holochain_core_api"
version = "0.1.0"
authors = ["Eric Harris-Braun <eric@harris-braun.com>"]

[dependencies]
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
holochain_dna = { path = "../dna" }
holochain_agent = { path = "../agent" }
futures-preview = "0.2.2"
tempfile = "3"

[dev-dependencies]
test_utils = { path = "../test_utils"}
