[package]
name = "holochain_core_api"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
holochain_dna = { path = "../dna" }
holochain_agent = { path = "../agent" }
futures-preview = "0.2.2"
tempfile = "3"

[dev-dependencies]
holochain_cas_implementations = { path = "../cas_implementations" }
test_utils = { path = "../test_utils"}
