[package]
name = "holochain_core_api_c_binding"
version = "0.0.32-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[lib]
name = "holochain_core_api_c_binding"
crate-type = ["staticlib"]


[dependencies]
holochain_core = { path = "../core" }
holochain_conductor_api = { path = "../conductor_api" }
holochain_core_types = { path = "../core_types" }
holochain_persistence_api = "=0.0.8"
