[package]
name = "holochain_dna_c_binding"
version = "0.0.21-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[lib]
name = "holochain_dna_c_binding"
crate-type = ["staticlib"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_persistence_api = { git = "https://github.com/holochain/holochain-persistence", branch = "2019-06-27-rust-nightly" }
holochain_json_api = { git = "https://github.com/holochain/holochain-serialization", branch = "2019-06-27-bump-nightly" }
