[package]
name = "holochain_dna_c_binding"
version = "0.0.30-alpha5"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[lib]
name = "holochain_dna_c_binding"
crate-type = ["staticlib"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_persistence_api = "=0.0.7"
holochain_json_api = "=0.0.17"
