[package]
name = "holochain_dpki"
version = "0.0.4-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
lazy_static = "~1.2.0"
base64 = "0.10.0"
holochain_core_types = { path = "../core_types" }
holochain_sodium = { path = "../sodium" }
serde = "1.0.87"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
hcid = "0.0.3-alpha"
bip39 = "0.6.0-beta.1"