[package]
name = "hdk"
version = "0.0.3"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
bitflags = "1.0"
lazy_static = "1.2"
holochain_wasm_utils = { path = "../wasm_utils" }
holochain_core_types = { path = "../core_types" }
holochain_core_types_derive = { path = "../core_types_derive" }
pretty_assertions = "0.5.1"

[dev-dependencies]
test_utils = { path = "../test_utils" }
holochain_container_api = { path = "../container_api" }
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
tempfile = "3"
boolinator = "2.4"
