[package]
name = "hdk"
version = "0.0.9-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
bitflags = "=1.0.4"
lazy_static = "=1.2.0"
holochain_wasm_utils = { path = "../wasm_utils" }
holochain_core_types = { path = "../core_types" }
holochain_core_types_derive = { path = "../core_types_derive" }
pretty_assertions = "=0.6.1"

[dev-dependencies]
test_utils = { path = "../test_utils" }
holochain_conductor_api = { path = "../conductor_api" }
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
tempfile = "=3.0.7"
boolinator = "=2.4.0"
