[package]
name = "logging"
version = "0.1.0"
authors = ["dymayday <meidhy.demagny@holo.host>"]
edition = "2018"

[dependencies]
log = { version = "0.4.6", features = ["std", "serde"] }
chrono = "0.4.6"
crossbeam-channel = "0.3.8"
regex = "1.1.7"
colored = "1.8.0"
toml = "0.5.1"
serde = "1.0.92"
serde_derive = "1.0.92"
