[package]
name = "logging"
version = "0.0.32-alpha2"
authors = ["dymayday <meidhy.demagny@holo.host>"]
edition = "2018"

[dependencies]
log = { version = "=0.4.8", features = ["std", "serde"] }
chrono = "=0.4.6"
crossbeam-channel = "=0.3.8"
regex = "=1.1.2"
colored = "=1.7.0"
toml = "=0.5.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
