[package]
name = "holochain_net"
version = "0.0.7-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dev-dependencies]
tempfile = "3"

[dependencies]
directories = "=1.0.2"
failure = "=0.1.5"
holochain_core_types = { path = "../core_types" }
holochain_core_types_derive = { path = "../core_types_derive" }
lazy_static = "=1.2.0"
reqwest = "=0.9.11"
sha2 = "=0.8.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
rmp-serde = "=0.13.7"
serde_bytes = "=0.10.5"
regex = "=1.1.2"
snowflake = "=1.3.0"
tungstenite = "=0.6.1"
url = "=1.7.2"
native-tls = "=0.2.2"
