[package]
name = "holochain_net"
version = "0.0.30-alpha6"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dev-dependencies]
tempfile = "=3.0.7"

[dependencies]
failure = "=0.1.5"
lib3h = { git = "https://github.com/holochain/lib3h", branch = "ghost-actor" }
lib3h_protocol = { git = "https://github.com/holochain/lib3h", branch = "ghost-actor" }
lib3h_crypto_api = { git = "https://github.com/holochain/lib3h", branch = "ghost-actor" }
lib3h_sodium = { git = "https://github.com/holochain/lib3h", branch = "ghost-actor" }
sim1h = { path = "../../sim1h/crates/sim1h" }
holochain_tracing = { git = "https://github.com/holochain/holochain-tracing", branch = "master" }
holochain_common = { path = "../common" }
holochain_core_types = { path = "../core_types" }
holochain_json_derive = "=0.0.17"
holochain_json_api = "=0.0.17"
holochain_persistence_api = "=0.0.8"
lazy_static = "=1.2.0"
libc = "=0.2.58"
reqwest = "=0.9.11"
sha2 = "=0.8.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
rmp-serde = "=0.13.7"
serde_bytes = "=0.10.5"
regex = "=1.1.2"
snowflake = "=1.3.0"
tungstenite = "=0.6.1"
url = "=1.7.2"
native-tls = "=0.2.2"
crossbeam-channel = "=0.3.8"
parking_lot = "=0.8.0"
env_logger = "=0.6.1"
logging = { path = "../logging" }

[features]

vendored = ["native-tls/vendored"]

default = [ "vendored" ]
