[package]
name = "holochain_net"
version = "0.0.32-alpha2"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dev-dependencies]
tempfile = "=3.0.7"

[dependencies]
failure = "=0.1.5"
#sim1h = { path = "../../sim1h/crates/sim1h" }
sim1h = { git = "https://github.com/holochain/sim1h", branch = "develop" }
#sim2h = { path = "../../sim2h/crates/sim2h" }
sim2h = { git = "https://github.com/holochain/sim2h", branch = "develop" }
lib3h_sodium = "=0.0.16"
lib3h_protocol = "=0.0.16"
lib3h = "=0.0.16"
lib3h_zombie_actor = "=0.0.16"
detach = "=0.0.16"
holochain_tracing = { version = "=0.0.1" }
holochain_common = { path = "../common" }
holochain_conductor_api_api = { path = "../conductor_api_api" }
holochain_core_types = { path = "../core_types" }
holochain_json_derive = "=0.0.17"
holochain_json_api = "=0.0.17"
holochain_persistence_api = "=0.0.8"
lazy_static = "=1.2.0"
libc = "=0.2.58"
reqwest = "=0.9.11"
sha2 = "=0.8.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
rmp-serde = "=0.13.7"
serde_bytes = "=0.10.5"
regex = "=1.1.2"
snowflake = "=1.3.0"
tungstenite = "=0.9.1"
url = { version = "=2.1.0", features = ["serde"] }
native-tls = "=0.2.2"
crossbeam-channel = "=0.3.8"
parking_lot = "=0.8.0"
env_logger = "=0.6.1"
holochain_logging = { version="=0.0.1", path = "../logging" }
log = "0.4.8"

[features]

vendored = ["native-tls/vendored"]

default = [ "vendored" ]
