[package]
name = "holochain_net_ipc"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]

[dependencies]
failure = "0.1.1"
holochain_net_connection = { path = "../net_connection" }
lazy_static = "1.0"
rmp-serde = "0.13.7"
serde = "1.0"
serde_bytes = "0.10.4"
serde_derive = "1.0"
zmq = { git = "https://github.com/erickt/rust-zmq.git", rev = "958848728954c979cc5e1675459e308c3685d1a1"}

[dev-dependencies]
