[package]
name = "holochain_net_ipc"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]

[dependencies]
failure = "0.1.1"
holochain_net_connection = { path = "../net_connection" }
lazy_static = "1.2"
regex = "1"
rmp-serde = "0.13.7"
serde = "1.0"
serde_bytes = "0.10.4"
serde_derive = "1.0"
zmq = "0.9.0"
snowflake = "1.2"

[dev-dependencies]
