[package]
name = "holochain_node_test_waiter"
version = "0.0.7-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
colored = "=1.7.0"
neon = "=0.2.0"
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
holochain_dpki = { path = "../hc_dpki" }
holochain_sodium = { path = "../sodium" }
