[package]
name = "holochain_node_test_waiter"
version = "0.0.19-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
colored = "=1.7.0"
neon = "=0.2.0"
holochain_core = { path = "../core" }
holochain_core_types = { path = "../core_types" }
holochain_dpki = { path = "../dpki" }
lib3h_sodium = "=0.0.1-alpha1"
crossbeam-channel = "=0.3.8"
